docs/capx/v1.5.x/types/nutanix_cluster.md
# NutanixCluster

The `NutanixCluster` resource defines the configuration of a CAPX Kubernetes cluster. 

Example of a `NutanixCluster` resource:

```YAML
apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
kind: NutanixCluster
metadata:
  name: ${CLUSTER_NAME}
  namespace: ${NAMESPACE}
spec:
  controlPlaneEndpoint:
    host: ${CONTROL_PLANE_ENDPOINT_IP}
    port: ${CONTROL_PLANE_ENDPOINT_PORT=6443}
  prismCentral:
    address: ${NUTANIX_ENDPOINT}
    additionalTrustBundle:
      kind: ConfigMap
      name: user-ca-bundle
    credentialRef:
      kind: Secret
      name: ${CLUSTER_NAME}
    insecure: ${NUTANIX_INSECURE=false}
    port: ${NUTANIX_PORT=9440}
```

## NutanixCluster spec
The table below provides an overview of the supported parameters of the `spec` attribute of a `NutanixCluster` resource.

### Configuration parameters

| Key                                        |Type  |Description                                                                       |
|--------------------------------------------|------|----------------------------------------------------------------------------------|
|controlPlaneEndpoint                        |object|Defines the host IP and port of the CAPX Kubernetes cluster.                      |
|controlPlaneEndpoint.host                   |string|Host IP to be assigned to the CAPX Kubernetes cluster.                            |
|controlPlaneEndpoint.port                   |int   |Port of the CAPX Kubernetes cluster. Default: `6443`                              |
|prismCentral                                |object|(Optional) Prism Central endpoint definition.                                     |
|prismCentral.address                        |string|IP/FQDN of Prism Central.                                                         |
|prismCentral.port                           |int   |Port of Prism Central. Default: `9440`                                            |
|prismCentral.insecure                       |bool  |Disable Prism Central certificate checking. Default: `false`                      |
|prismCentral.credentialRef                  |object|Reference to credentials used for Prism Central connection.                       |
|prismCentral.credentialRef.kind             |string|Kind of the credentialRef. Allowed value: `Secret`                                |
|prismCentral.credentialRef.name             |string|Name of the secret containing the Prism Central credentials.                      |
|prismCentral.credentialRef.namespace        |string|(Optional) Namespace of the secret containing the Prism Central credentials.      |
|prismCentral.additionalTrustBundle          |object|Reference to the certificate trust bundle used for Prism Central connection.      |
|prismCentral.additionalTrustBundle.kind     |string|Kind of the additionalTrustBundle. Allowed value: `ConfigMap`                     |
|prismCentral.additionalTrustBundle.name     |string|Name of the `ConfigMap` containing the Prism Central trust bundle.                |
|prismCentral.additionalTrustBundle.namespace|string|(Optional) Namespace of the `ConfigMap` containing the Prism Central trust bundle.|
|failureDomains                              |list  |(Optional) Failure domains for the Kubernetes nodes                               |
|failureDomains.[].name                      |string|Name of the failure domain                                                        |
|failureDomains.[].cluster                   |object|Reference (name or uuid) to the Prism Element cluster. Name or UUID can be passed |
|failureDomains.[].cluster.type              |string|Type to identify the Prism Element cluster. Allowed values: `name` and `uuid`     |
|failureDomains.[].cluster.name              |string|Name of the Prism Element cluster.                                                |
|failureDomains.[].cluster.uuid              |string|UUID of the Prism Element cluster.                                                |
|failureDomains.[].subnets                   |list  |(Optional) Reference (name or uuid) to the subnets to be assigned to the VMs.     |
|failureDomains.[].subnets.[].type           |string|Type to identify the subnet. Allowed values: `name` and `uuid`                    |
|failureDomains.[].subnets.[].name           |string|Name of the subnet.                                                               |
|failureDomains.[].subnets.[].uuid           |string|UUID of the subnet.                                                               |
|failureDomains.[].controlPlane              |bool  |Indicates if a failure domain is suited for control plane nodes

!!! note
    To prevent duplicate IP assignments, it is required to assign an IP-address to the `controlPlaneEndpoint.host` variable that is not part of the Nutanix IPAM or DHCP range assigned to the subnet of the CAPX cluster.